--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -23,7 +23,7 @@
  height: 50px;
 }
 
-.welcome button.play, .welcome button.tour, .welcome button.map, .welcome button.browse {
+.welcome .options button {
   width: 250px;
   height: 350px;
   background-color: blue;
@@ -38,22 +38,31 @@
   box-shadow: 10px 10px 35px -13px rgba(0,0,0,0.75);
   font-size: 30px;
   cursor: pointer;
-}
-
-.welcome button.play:hover, .welcome button.tour:hover, .welcome button.map:hover, .welcome button.browse:hover {
-  border-color: rgb(49, 229, 252);
-}
-
-.welcome .pick-a-card, .welcome button {
-  font-family: 'PlaySir', sans-serif;
+  text-shadow:
+    3px 3px 0 #000,
+  -1px -1px 0 #000,  
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+    1px 1px 0 #000;
+    font-family: 'PlaySir', sans-serif;
   -webkit-text-stroke: 1px black;
   color: white;
+}
+
+.welcome .pick-a-card {
   text-shadow:
-      3px 3px 0 #000,
-    -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-      1px 1px 0 #000;
+    3px 3px 0 #000,
+  -1px -1px 0 #000,  
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+    1px 1px 0 #000;
+    font-family: 'PlaySir', sans-serif;
+  -webkit-text-stroke: 1px black;
+  color: white;
+}
+
+.welcome .options  button:hover {
+  border-color: rgb(49, 229, 252);
 }
 
 .welcome button.play  {
